# aucradar

./: .env  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
alerts/: models.py  serializers.py  services.py  urls.py  views.py
alerts/management/commands/: run_alerts.py
alerts/migrations/: 0001_initial.py  0002_initial.py
auctions/: models.py  serializers.py  urls.py  views.py
auctions/migrations/: 0001_initial.py  0002_auctionitem_ai_analysis_and_more.py  0002_auctionitem_raw_bid_method_auctionitem_raw_source_and_more.py  0003_alter_auctionitem_appraisal_price_and_more.py
config/: settings.py  urls.py
core/: urls.py  views.py
core/templates/core/: about.html  alerts.html  base.html  contact.html  dashboard.html  features.html  home.html  pricing.html  profile.html  watchlist.html
core/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_from.html  signup.html
deploy/nginx/: aucradar.conf
operations/: models.py  serializers.py  services.py  urls.py  views.py
operations/management/commands/: crawl_court.py  crawl_onbid.py  refresh_auction_status.py
operations/migrations/: 0001_initial.py  0002_alter_crawljob_source.py  0002_initial.py
users/: forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
